# pipecat-music-player

./: README.md
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  types.ts
client/src/components/: Grid.tsx  Header.tsx
client/src/hooks/: useClickSender.ts  useServerMessages.ts
client/src/screens/: Artist.tsx  Detail.tsx  Discovery.tsx  Welcome.tsx
server/: .dockerignore  .env.example  bot.py  catalog_agent.py  deezer.py  descriptions.py  discovery_workers.py  messages.py  music_agent.py  pcc-deploy.toml  pyproject.toml  ui_agent.py  voice_agent.py
